--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Usuario", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Usuarios", "GetAll", "Usuario", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Candidatos", "GetAll", "Candidato", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Email", "SendEmail", "Candidato", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
