--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Usuarios", "GetAll", "Usuario", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("UsuariosJS", "GetAllJS", "UsuarioJS", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Candidatos", "GetAll", "Candidato", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Email", "SendEmail", "Candidato", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
