Corregido GetAll de candidato

--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Usuarios", "GetAll", "Usuario", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("UsuariosJS", "GetAllJS", "UsuarioJS", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Candidatos", "GetAll", "Candidato", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Citas", "GetAll", "Cita", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Email", "SendEmail", "Candidato", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
