--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Candidatos", "GetAll", "Candidato", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Citas", "GetAll", "Cita", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Email", "SendEmail", "Candidato", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Empresas", "GetAll", "Empresa", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
