citas add no terminado

--- a/PL/Views/Cita/GetAll.cshtml
+++ b/PL/Views/Cita/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model ML.Vacante
+﻿@model ML.Cita
 
 @{
     ViewBag.Title = "GetAll";
@@ -74,4 +74,4 @@
     var GetAllURL = "@Url.Action("GetAllCita", "Cita")?idVacante=";
 </script>
 
-<script src="~/Scripts/Citas/CRUDCitas.js"></script>
+<script src="~/Scripts/Citas/CRUDCitasAdd.js"></script>
